# better-auth-template

./: .env.example  README.md  cargo-generate.toml
{{project-name}}/: Cargo.toml
{{project-name}}/src/: main.rs
