[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[dependencies]
better-auth = { version = "0.1", features = ["axum"{% if database == "postgres" %}, "sqlx-postgres"{% endif %}] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
{% if database == "postgres" %}dotenvy = "0.15"
{% endif %}
